--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -23,9 +23,23 @@ shadow-exclude = [
 #################################
 
 fading = true
-fade-in-step = 0.028
-fade-out-step = 0.03
+fade-in-step = 0.075
+fade-out-step = 0.065
 fade-delta = 8
+
+####################################
+#           Animation           #
+####################################
+
+transition-length = 25;
+transition-pow-x = 0.3;
+transition-pow-y = 0.3;
+transition-pow-w = 0.5;
+transition-pow-h = 0.5;
+size-transition = true;
+spawn-center-screen = false;
+spawn-center = false;
+no-scale-down = false;
 
 #################################
 #   Transparency / Opacity      #
@@ -56,7 +70,7 @@ blur-background = true
 # blur-background-frame = false
 blur-background-fixed = false
 
-blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
